--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
-  "name": "proscal",
+  "name": "proscaff",
   "version": "1.0.0",
-  "description": "Projects scalfolder",
+  "description": "Projects scaffolder",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "dev": "webpack --mode development",
+    "prod": "webpack --mode production"
   },
-  "keywords": [
-    "Webpack",
-    "Nodejs",
-    "npm",
-    "gulp"
-  ],
+  "keywords": ["Webpack", "Nodejs", "npm"],
   "author": "Kingsley <kingsley.nnaji@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "chai": "^4.2.0",
-    "eslint": "^6.1.0",
-    "mocha": "^6.2.0",
-    "prettier": "^1.18.2",
-    "webpack": "^4.38.0",
-    "webpack-cli": "^3.3.6"
+    "chai": "4.2.0",
+    "eslint": "6.1.0",
+    "mocha": "6.2.0",
+    "prettier": "1.18.2",
+    "webpack": "4.38.0",
+    "webpack-cli": "3.3.6"
   }
 }
