--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
     "prettier": "1.18.2",
     "webpack": "4.38.0",
     "webpack-cli": "3.3.6"
+  },
+  "dependencies": {
+    "cli-color": "1.4.0",
+    "commander": "3.0.1",
+    "moment": "2.24.0",
+    "readline-sync": "1.4.10",
+    "shelljs": "0.8.3"
   }
 }
